# playground

./: .gitignore  README.md  STRUCTURE.md  build.bat  build.sh
01_basics/day_05/: CMakeLists.txt
01_basics/day_05/include/: utils.hpp
01_basics/day_05/src/: main.cpp  physics.cpp  utils.cpp
01_basics/end_project/: CMakeLists.txt  README.md
01_basics/end_project/include/: analyzer.hpp  parser.hpp
01_basics/end_project/src/: analyzer.cpp
02_core_cpp/day_03/: CMakeLists.txt  README.md
02_core_cpp/day_04/: CMakeLists.txt
02_core_cpp/day_04/include/: vector2d.hpp
02_core_cpp/day_04/src/: main.cpp  vector2d.cpp
02_core_cpp/end_project/cpp/: CMakeLists.txt
02_core_cpp/end_project/cpp/include/: matrix.hpp  vector.hpp
02_core_cpp/end_project/cpp/src/: main.cpp  matrix.cpp  vector.cpp
03_memory_and_functions/day_04/: CMakeLists.txt
03_memory_and_functions/day_04/include/: memory_utils.hpp
03_memory_and_functions/day_04/src/: memory_utils.cpp
04_math_foundations/end_project/cpp/: CMakeLists.txt
04_math_foundations/end_project/cpp/src/: matrix.cpp  solver.cpp
05_data_structures/end_project/cpp/: CMakeLists.txt
05_data_structures/end_project/cpp/include/: list.hpp  map.hpp  vector.hpp
05_data_structures/end_project/cpp/src/: list.cpp
07_systems_cpp/: README.md
11_capstones/capstone_02_compiler/cpp/: CMakeLists.txt
11_capstones/capstone_02_compiler/cpp/include/: parser.hpp
11_capstones/capstone_02_compiler/cpp/src/: parser.cpp
11_capstones/capstone_03_distributed/cpp/: CMakeLists.txt
11_capstones/capstone_03_distributed/cpp/include/: node.hpp
11_capstones/capstone_03_distributed/cpp/src/: message.cpp
cpp-journey/: CMakeLists.txt  README.md
cpp-journey/.cache/clangd/index/: algorithms.hpp.014B14EAE9E2817D.idx  allocator.cpp.79E3BD6A6D9A23D6.idx  allocator.hpp.3295CF7E69164FFC.idx  analyzer.cpp.CA8508C68CFB9462.idx  analyzer.hpp.4FF1FBC3F9476D81.idx  arena_allocator.cpp.8D10217AAFF7D871.idx  arrays.cpp.6069C126983DF5C3.idx  arrays.hpp.B0D5D92D12C620D8.idx  ast.cpp.ACE7A77546BDD193.idx  benchmark.cpp.9652CF4204183EA5.idx  binary.cpp.05663A31885ACE83.idx  btree.cpp.2AC1FFB92B1D1BC3.idx  btree.cpp.D59FDA9878C5684F.idx  btree.hpp.E8D007DEB2D9D5DA.idx  cache.hpp.D6B193F3E7B355FA.idx  cache_demo.cpp.3678FA98A3A492AC.idx  calculator.cpp.AFF7DA29DD762A68.idx  calculator.hpp.93FDCFA3C45AE768.idx  calculus.hpp.4E2CA24A2FC6334D.idx  colors.cpp.93C64B824475E853.idx  colors.hpp.5FFD6757B6367C5E.idx  conditionals.cpp.D10B5397C16B1E26.idx  conditionals.hpp.2E2C46E8D7A42C9C.idx  const_demo.cpp.51DAB93E02F48FF7.idx  const_demo.hpp.9C6C2531A393F0A5.idx  counter.cpp.3FFBFFFDC9D6B871.idx  counter.hpp.C295D1E41C064626.idx  decomposition.cpp.EEFD9B596FB48E73.idx  decomposition.hpp.C27541BA046AEDD9.idx  differentiation.cpp.C22FEB7CC4DBB8CE.idx  disk.cpp.A4E023583F29D4F0.idx  dynamic_array.cpp.551E75C41A100F4E.idx  dynamic_array.hpp.44BF33CA308FE066.idx  engine.cpp.B72A4DC19E7A65CE.idx  engine.cpp.FE756CC2D081869B.idx  engine.hpp.164C3A0B3F3A6480.idx  engine.hpp.88A5C0186A91DC7F.idx  entity.cpp.ED1E7753ACFBE2E4.idx  executor.cpp.3B97678AE0922FF5.idx  executor.cpp.6C9E0E9C9F0E239D.idx  (+148 more)
cpp-journey/01_basics/: CMakeLists.txt
cpp-journey/01_basics/day_01/: CMakeLists.txt  README.md
cpp-journey/01_basics/day_01/src/: conditionals.cpp  main.cpp
cpp-journey/01_basics/day_02/: README.md
cpp-journey/01_basics/day_02/include/: loops.hpp
cpp-journey/01_basics/day_02/src/: main.cpp
cpp-journey/01_basics/day_03/include/: arrays.hpp
cpp-journey/01_basics/day_03/src/: arrays.cpp  main.cpp
cpp-journey/01_basics/day_04/: CMakeLists.txt
cpp-journey/01_basics/day_04/include/: math_functions.hpp
cpp-journey/01_basics/day_04/src/: main.cpp
cpp-journey/01_basics/day_05/: README.md
cpp-journey/01_basics/day_05/include/: geometry.hpp  physics.hpp
cpp-journey/01_basics/day_05/src/: geometry.cpp
cpp-journey/01_basics/end_project/include/: calculator.hpp
cpp-journey/01_basics/end_project/src/: calculator.cpp  main.cpp  parser.cpp
cpp-journey/02_core_cpp/day_01/: CMakeLists.txt
cpp-journey/02_core_cpp/day_02/: CMakeLists.txt
cpp-journey/02_core_cpp/day_02/include/: const_demo.hpp
cpp-journey/02_core_cpp/day_04/: README.md
cpp-journey/02_core_cpp/end_project/: README.md
cpp-journey/03_memory_and_functions/: CMakeLists.txt
cpp-journey/03_memory_and_functions/day_01/: CMakeLists.txt
cpp-journey/03_memory_and_functions/day_02/: CMakeLists.txt  README.md
cpp-journey/03_memory_and_functions/day_04/: README.md
cpp-journey/04_math_foundations/: CMakeLists.txt
cpp-journey/04_math_foundations/day_02/: CMakeLists.txt
cpp-journey/04_math_foundations/day_03/: CMakeLists.txt
cpp-journey/04_math_foundations/day_04/: README.md
cpp-journey/05_data_structures/: README.md
cpp-journey/05_data_structures/day_01/: CMakeLists.txt  README.md
cpp-journey/05_data_structures/day_02/: CMakeLists.txt
cpp-journey/05_data_structures/day_03/: CMakeLists.txt  README.md
cpp-journey/06_algorithms/: README.md
cpp-journey/06_algorithms/day_02/: CMakeLists.txt  README.md
cpp-journey/06_algorithms/day_03/: README.md
cpp-journey/06_algorithms/day_04/: README.md
cpp-journey/07_systems_cpp/day_01/: CMakeLists.txt  README.md
cpp-journey/07_systems_cpp/day_04/: README.md
cpp-journey/08_databases_cpp/: README.md
cpp-journey/08_databases_cpp/day_01/: CMakeLists.txt
cpp-journey/08_databases_cpp/day_02/: README.md
cpp-journey/08_databases_cpp/day_03/: CMakeLists.txt
cpp-journey/08_databases_cpp/day_04/: README.md
cpp-journey/09_performance/: CMakeLists.txt
cpp-journey/09_performance/day_02/: CMakeLists.txt  README.md
cpp-journey/09_performance/day_03/: CMakeLists.txt
cpp-journey/09_performance/end_project/: README.md
cpp-journey/10_advanced_math/: README.md
cpp-journey/10_advanced_math/day_01/: CMakeLists.txt  README.md
cpp-journey/10_advanced_math/day_03/: CMakeLists.txt
cpp-journey/10_advanced_math/end_project/: README.md
cpp-journey/11_capstones/: CMakeLists.txt
cpp-journey/11_capstones/capstone_01_game_engine/: README.md
(+231 files in other folders)
