cmake_minimum_required(VERSION 3.16)
project(algo_suite LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
add_library(algorithms SHARED src/sorting.cpp src/searching.cpp src/graphs.cpp src/benchmark.cpp)
target_include_directories(algorithms PUBLIC include)
add_executable(algo_test src/main.cpp)
target_link_libraries(algo_test PRIVATE algorithms)
